--- a/english-puzzle/index.html
+++ b/english-puzzle/index.html
@@ -11,7 +11,7 @@
     <div class="start">
         <h1>english puzzle</h1>
         <p class="start__info">Click on words, collect phrases.<br>
-            Select tooltips in the menu.</p>
+            You can drag and drop the words.</p>
         <button class="btn start__btn">start</button>
     </div>
     <header class="header">
@@ -21,15 +21,22 @@
             <button class="btn form__btn">go!</button>
         </form>
         <div class="hints">
-            <button class="btn hints__word">W</button>
-            <button class="btn hints__translation">T</button>
             <button class="btn hints__sentence">
-                <img src="./src/assets/sound.png" class="hints__word-icon" alt="sound"></img>
+                <img src="./src/assets/audioTranslation.png" class="hints__icon" alt="audioTranslation"></img>
             </button>
-            <button class="btn hints__image">I</button>
+            <button class="btn hints__translation">
+                <img src="./src/assets/translation.png" class="hints__icon" alt="translation"></img>
+            </button>
+            <button class="btn hints__word inactive">
+                <img src="./src/assets/audioWord.png" class="hints__icon" alt="audioWord"></img>
+            </button>
+            <button class="btn hints__image inactive">
+                <img src="./src/assets/image.png" class="hints__icon" alt="image"></img>
+            </button>
         </div>
     </header>
     <main class="main">
+        <img src="./src/assets/audioTranslation.png" class="hints__icon" alt="auto-speak"></img>
         <div class="translation"></div>
         <div class="results-sentences">
         </div>
@@ -42,6 +49,8 @@
         </div>
         <div class="results none">
             <div class="results-container">
+                <div class="picture-mini final-image"></div>
+                <div>Моне Клод Оскар – Красные лодки в Аржантее, 1875.</div>
                 <p class="errors">I don't know
                     <span class="errors-number"></span>
                 </p>
@@ -53,8 +62,8 @@
                 <div class="success-items">
                 </div>
                 <div class="results--btns">
-                    <a href="#" class="btn continue-btn">Continue</a>
-                    <a href="#" class="btn stats-btn">Statistics</a>
+                    <button class="btn results-continue-btn">Continue</button>
+                    <button class="btn stats-btn">Statistics</button>
                 </div>
             </div>
         </div>
