feat: add logout

--- a/english-puzzle/index.html
+++ b/english-puzzle/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <div class="login-window none">
         <div class="login-info">The password should contain at least 8 characters, at least 1 digit, 1 uppercase 
             and 1 lowercase letters and 1 of the following symbols +-_@$!%*?&#.,;:[]{}
@@ -26,6 +27,7 @@
         <button class="btn start__btn">start</button>
     </div>
     <header class="header">
+    <button class="btn log-out">Log Out</button>
         <form class="form" action="" method="GET">
             <input class="form__level" type="text" autocomplete="off" placeholder="level">
             <input class="form__round" type="text" autocomplete="off" placeholder="round">
